--- a/StudHelper/StudHelper/appsettings.json
+++ b/StudHelper/StudHelper/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LENOVO-PC\\SQLEXPRESS;Database=StudHelper;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-IVDBUTA;Database=StudHelper;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
