Add scaffolded pages for user profile on UserRole

--- a/StudHelper/StudHelper/appsettings.json
+++ b/StudHelper/StudHelper/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=LENOVO-PC\\SQLEXPRESS;Database=StudHelper;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=DESKTOP-IUB9DPV\\SQLEXPRESS;Database=StudHelper;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
